--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Fatih İNCE</title>
 </head>
 <body>
-        <p>Klasörler halinde attım projeleri seni lanet olası pislik</p>
+        <p>Fatih'in çalışma sayfası</p>
 </body>
 </html>
